--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,5 +1,5 @@
 /* Select the image with a class of kitty-1 */
-
+img .kitty-1
 /*__write_selector_here__*/ {
   position: absolute;
   z-index: 1;
@@ -8,7 +8,7 @@
 }
 
 /* Select the image with id of kitty-2 */
-
+#kitty-2
 /*__write_selector_here__*/ {
   position: absolute;
   z-index: 2;
@@ -17,14 +17,14 @@
 }
 
 /* Select the image inside the element with an id of basket (using its descendent relationship) */
-
+#basket img
 /*__write_selector_here__*/ {
   position: absolute;
   z-index: 5;
   top: 291px;
   left: 319px;
 }
-
+#ball + img
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
 /*__write_selector_here__*/ {
@@ -33,7 +33,7 @@
   top: 260px;
   left: 455px;
 }
-
+img[alt="Kitty 5"]
 /* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
 
 /*__write_selector_here__*/ {
