--- a/css/place-kitty.css
+++ b/css/place-kitty.css
@@ -1,5 +1,5 @@
 /* Select the image with a class of kitty-1 */
-
+css/place-kitty-1.css
 /*__write_selector_here__*/ {
   position: absolute;
   z-index: 1;
